--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Woensug Eric Choi</h1>
+							<p>Graduate Student (PhD Candidate)</p>
+							<p>Ship Noise and Vibration Laboratory</p>
+							<p>Seoul National University</p>
 						</header>
 						<!--
 						<hr />
@@ -66,9 +68,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="http://www.facebook.com/erikku.choi" class="fa-facebook">Facebook</a></li>
+                                                                <li><a href="http://onedayof.tistory.com" class="fa-instagram">Instagram</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -76,7 +77,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li>
+							<li>&copy; Woensug Eric Choi</li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
