--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Woensug Eric Choi</h1>
-							<p>Graduate Student (PhD Candidate)</p>
-							<p>Ship Noise and Vibration Laboratory</p>
-							<p>Seoul National University</p>
+							<p>Graduate Student (PhD Candidate)<br><br>
+							Ship Noise and Vibration Laboratory<br><br>
+							Seoul National University</p>
 						</header>
 						<!--
 						<hr />
