--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Woensug Eric Choi</h1>
-							<p>Graduate Student (PhD Candidate)<br><br>
-							Ship Noise and Vibration Laboratory<br><br>
+							<p>Graduate Student (PhD Candidate)<br>
+							Ship Noise and Vibration Laboratory<br>
 							Seoul National University</p>
 						</header>
 						<!--
