--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="http://www.facebook.com/erikku.choi" class="fa-facebook">Facebook</a></li>
-                                                                <li><a href="http://onedayof.tistory.com" class="fa-instagram">Instagram</a></li>
+                                                                <li><a href="https://www.instagram.com/erikku_choi/" class="fa-instagram">Instagram</a></li>
+								<li><a href="http://onedayof.tistory.com/" class="fa fa-desktop">Homepage</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -78,7 +78,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Woensug Eric Choi</li>
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Design: <a href="http://onedayof.tistory.com/">Tistory Homepage</a></li>
 						</ul>
 					</footer>
 
