--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Woensug Eric Choi</li>
-							<li>Design: <a href="http://onedayof.tistory.com/">Tistory Homepage</a></li>
+							<li>Homepage: <a href="http://onedayof.tistory.com/">Tistory</a></li>
 						</ul>
 					</footer>
 
