--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta name="google-site-verification" content="npMVZgix9HPhVeC8MEsW5Sxt5UaYqHHYSzS9W74OJSE" />
+		<meta name="naver-site-verification" content="555062748b9f4c70b2d31f72538f0c8a580041a6"/>
 	</head>
 	<body class="is-loading">
 
