--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Woensug Eric Choi</title>
+		<meta name="description" content="최원석의 개인페이지, Personal Page of Woensug Eric Choi,エリックの個人ページ"
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
