--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta name="google-site-verification" content="npMVZgix9HPhVeC8MEsW5Sxt5UaYqHHYSzS9W74OJSE" />
 		<meta name="naver-site-verification" content="555062748b9f4c70b2d31f72538f0c8a580041a6"/>
+		
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Eric's Personal Page">
+		<meta property="og:description" content="최원석의 개인페이지, Personal Page of Woensug Eric Choi,エリックの個人ページ명">
+		<meta property="og:image" content="images/avatar.jpg">
+		<meta property="og:url" content="http://kickflipin.github.io/">
 	</head>
 	<body class="is-loading">
 
