--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 							<h1>Woensug Eric Choi</h1>
 							<p>Graduate Student (PhD Candidate)<br>
 							Ship Noise and Vibration Laboratory<br>
-							Seoul National University</p>
+							Seoul National University<br><br>
+							woensug.eric.choi@gmail.com</p>
 						</header>
 						<!--
 						<hr />
