mail link added at bottom

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 							<h1>Woensug Eric Choi</h1>
 							<p>Graduate Student (PhD Candidate)<br>
 							Ship Noise and Vibration Laboratory<br>
-							Seoul National University<br><br>
-							woensug.eric.choi@gmail.com</p>
+							Seoul National University</p>
 						</header>
 						<!--
 						<hr />
@@ -88,6 +87,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Woensug Eric Choi</li>
+							<li>Mail : <a href="mailto:woensug.eric.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
 							<li>Homepage: <a href="http://onedayof.tistory.com/">Tistory</a></li>
 						</ul>
 					</footer>
