--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Woensug Eric Choi</li>
-							<li>Mail : <a href="mailto:woensug.eric.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
+							<li>E-Mail : <a href="mailto:woensug.eric.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
 							<li>Homepage: <a href="http://onedayof.tistory.com/">Tistory</a></li>
 						</ul>
 					</footer>
