--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			 ga('send', 'pageview');
 
 </script>
+<script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script> <script type="text/javascript"> if(!wcs_add) var wcs_add = {}; wcs_add["wa"] = "12e7fe0dfb0dc08"; wcs_do(); </script>
 
 	</body>
 </html>
