--- a/index.html
+++ b/index.html
@@ -114,5 +114,8 @@
 </script>
 <script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script> <script type="text/javascript"> if(!wcs_add) var wcs_add = {}; wcs_add["wa"] = "12e7fe0dfb0dc08"; wcs_do(); </script>
 
+alert(document.referrer);
+
+
 	</body>
 </html>
