--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<h1>Woensug Eric Choi</h1>
 							<p>Graduate Student (PhD Candidate)<br>
 							Ship Noise and Vibration Laboratory<br>
-							Seoul National University Test1</p>
+							Seoul National University Test2</p>
 						</header>
 						<!--
 						<hr />
@@ -114,7 +114,7 @@
 </script>
 <script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script> <script type="text/javascript"> if(!wcs_add) var wcs_add = {}; wcs_add["wa"] = "12e7fe0dfb0dc08"; wcs_do(); </script>
 
-alert(document.referrer);
+<script> alert(document.referrer); </script>
 
 
 	</body>
