change blog address to memorandus.me

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<footer>
 							<ul class="icons">
                                                                 <li><a href="https://www.instagram.com/erikku_choi/" class="fa-instagram">Instagram</a></li>
-								<li><a href="http://onedayof.tistory.com/" class="fa fa-desktop">Homepage</a></li>
+								<li><a href="http://memorandus.me/" class="fa fa-desktop">Homepage</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -88,7 +88,7 @@
 						<ul class="copyright">
 							<li>&copy; Woensug Eric Choi</li>
 							<li>E-Mail : <a href="mailto:woensug.eric.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
-							<li>Homepage: <a href="http://onedayof.tistory.com/">Tistory</a></li>
+							<li>Homepage: <a href="http://memorandus.me/">Blog</a></li>
 						</ul>
 					</footer>
 
