added facebook and mirrorhoteladrogue

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 						<footer>
 							<ul class="icons">
                                                                 <li><a href="https://www.instagram.com/erikku_choi/" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/erikku.choi" class="fa fa-facebook">Facebook</a></li>
 								<li><a href="http://memorandus.me/" class="fa fa-desktop">Homepage</a></li>
+								<li><a href="http://cargocollective.com/mirrorhoteladrogue" class="fa fa-cubes">MirrorHotelAdrogue</a></li>
 							</ul>
 						</footer>
 					</section>
