Update Ph.D Status and add google scholar link

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Woensug Eric Choi</h1>
-							<p>Graduate Student (PhD Candidate)<br>
-							Ship Noise and Vibration Laboratory<br>
-							Seoul National University</p>
+							<p>Ph.D. in Engineering <br>
+							Google Scholar : <a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">link</a> </p>
 						</header>
 						<!--
 						<hr />
