--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Woensug Eric Choi</h1>
+							<h1>Choi Woen-Sug</h1>
 							<p>Ph.D. in Engineering <br>
 							Google Scholar : <a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">link</a> </p>
 						</header>
