Update Name order

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Woensug Eric Choi</title>
-		<meta name="description" content="최원석의 개인페이지, Personal Page of Woensug Eric Choi,エリックの個人ページ"
+		<title>Choi Woen-Sug</title>
+		<meta name="description" content="최원석의 개인페이지, Personal Page of Choi Woen-Sug,エリックの個人ページ"
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 		
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Eric's Personal Page">
-		<meta property="og:description" content="최원석의 개인페이지, Personal Page of Woensug Eric Choi,エリックの個人ページ명">
+		<meta property="og:description" content="최원석의 개인페이지, Personal Page of Choi Woen-Sug,エリックの個人ページ명">
 		<meta property="og:image" content="images/avatar.jpg">
 		<meta property="og:url" content="http://kickflipin.github.io/">
 	</head>
@@ -87,7 +87,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Woensug Eric Choi</li>
+							<li>&copy; Choi Woen-Sug</li>
 							<li>E-Mail : <a href="mailto:woensug.eric.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
 							<li>Homepage: <a href="http://memorandus.me/">Blog</a></li>
 						</ul>
