--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
 							<p>Ph.D. in Engineering <br>
-							Curriculum Vitae : <a href="https://github.com/kickflipin/kickflipin.github.io/raw/master/Woensug%20Choi%20CV%20wo%20Ref.pdf">link</a>
+							Curriculum Vitae : <a href="https://github.com/kickflipin/kickflipin.github.io/raw/master/Woensug%20Choi%20CV%20wo%20Ref.pdf">link</a> <br>
 							Google Scholar : <a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">link</a> </p>
 						</header>
 						<!--
