--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<h1>Choi Woen-Sug</h1>
 							<p>Ph.D. in Engineering <br>
 							Ship Noise and Vibration <br>
-							<a href="https://github.com/kickflipin/kickflipin.github.io/raw/master/Woensug%20Choi%20CV%20wo%20Ref.pdf">Curriculum Vitae</a> <br>
+							<a href="https://kickflipin.github.io/Woensug%20Choi%20CV%20wo%20Ref.pdf">Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> </p>
 						</header>
 						<!--
