chage domain name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<meta property="og:title" content="Eric's Personal Page">
 		<meta property="og:description" content="최원석의 개인페이지, Personal Page of Choi Woen-Sug,エリックの個人ページ명">
 		<meta property="og:image" content="images/avatar.jpg">
-		<meta property="og:url" content="http://kickflipin.github.io/">
+		<meta property="og:url" content="http://woensug-choi.github.io/">
 	</head>
 	<body class="is-loading">
 
@@ -36,7 +36,7 @@
 							<h1>Choi Woen-Sug</h1>
 							<p>Ph.D. in Engineering <br>
 							Ship Noise and Vibration <br>
-							<a href="https://kickflipin.github.io/Woensug%20Choi%20CV%20wo%20Ref.pdf" target="_blank">Curriculum Vitae</a> <br>
+							<a href="https://woensug-choi.github.io/Woensug%20Choi%20CV%20wo%20Ref.pdf" target="_blank">Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> </p>
 						</header>
 						<!--
