--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
-							<p>NPS Post-doc <br>
+							<p>NPS Post-doc <br><br>
                                                         Ph.D. in Engineering <br>
-							Ship Noise and Vibration <br>
+							Ship Noise and Vibration <br><br>
 							<a href="https://woensug-choi.github.io/Woensug%20Choi%20CV%20wo%20Ref.pdf" target="_blank">Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> </p>
 						</header>
