--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
-							<p>NPS Post-doc <br><br>
+							<p><br>NPS Post-doc <br><br>
                                                         Ph.D. in Engineering <br>
 							Ship Noise and Vibration <br><br>
 							<a href="https://woensug-choi.github.io/Woensug%20Choi%20CV%20wo%20Ref.pdf" target="_blank">Curriculum Vitae</a> <br>
@@ -91,7 +91,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Choi Woen-Sug</li>
-							<li>E-Mail : <a href="mailto:woensug.eric.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
+							<li>E-Mail : <a href="mailto:woensug.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
 							<li>Homepage: <a href="http://memorandus.me/">Blog</a></li>
 						</ul>
 					</footer>
