--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Choi Woen-Sug</li>
-							<li>E-Mail : <a href="mailto:woensug.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.eric.choi@gmail.com</a></li>
+							<li>E-Mail : <a href="mailto:woensug.choi@gmail.com?Subject=Hello%20again" target="_top">woensug.choi@gmail.com</a></li>
 							<li>Homepage: <a href="http://memorandus.me/">Blog</a></li>
 						</ul>
 					</footer>
