--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p><br>NPS Post-doc <br><br>
                                                         Ph.D. in Engineering <br>
 							Ship Noise and Vibration <br><br>
-							<a href="https://woensug-choi.github.io/Woensug%20Choi%20CV%20wo%20Ref.pdf" target="_blank">Curriculum Vitae</a> <br>
+							<a href="https://woensug-choi.github.io//CV_%EC%B5%9C%EC%9B%90%EC%84%9D_WoensugChoi.pdf" target="_blank">Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> </p>
 						</header>
 						<!--
