--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
-							<p><br>NPS Post-doc <br><br>
+							<p>NPS Post-doc <br><br>
                                                         Ph.D. in Engineering <br>
-							Ship Noise and Vibration <br><br>
+							Github : <a href="https://github.com/woensug-choi">@woensug-choi</a> <br><br>
 							<a href="https://woensug-choi.github.io//CV_%EC%B5%9C%EC%9B%90%EC%84%9D_WoensugChoi.pdf" target="_blank">Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> </p>
 						</header>
