Add line change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>Ph.D. in Engineering <br><br>
                                                         NPS Post-doc <br><br>
 							<a href="https://woensug-choi.github.io//CV_%EC%B5%9C%EC%9B%90%EC%84%9D_WoensugChoi.pdf" target="_blank">Curriculum Vitae</a> <br>
-							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a>
+							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> <br>
 							<a href="https://github.com/woensug-choi">@woensug-choi</a> <br></p>
 						</header>
 						<!--
