--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							<h1>Choi Woen-Sug</h1>
 							<p>Korea Maritime & Ocean University <br> Ocean Engineering <br><br>
 							<a href="https://woensug-choi.github.io//CV_%EC%B5%9C%EC%9B%90%EC%84%9D_WoensugChoi.pdf" target="_blank">Curriculum Vitae</a> <br>
-							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ">Google Scholar</a> <br>
-							<a href="https://github.com/woensug-choi">@woensug-choi</a> <br></p>
+							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ" target="_blank">Google Scholar</a> <br>
+							<a href="https://github.com/woensug-choi" target="_blank">@woensug-choi</a> <br></p>
 						</header>
 						<!--
 						<hr />
