--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/98701A6A-AC39-4B9D-9649-082EAA3BFB52.jpeg" id="responsive-image" alt="" /></span>
+							<span class="avatar"><img src="images/98701A6A-AC39-4B9D-9649-082EAA3BFB52.jpeg" width="500" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
 							<p>Korea Maritime & Ocean University <br> Ocean Engineering <br><br>
 							<a href="https://woensug-choi.github.io//CV_%EC%B5%9C%EC%9B%90%EC%84%9D_WoensugChoi.pdf" target="_blank">Curriculum Vitae</a> <br>
