--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<span class="avatar"><img src="images/C63DA81E-B36B-4102-B52F-2B446E89ACA5.jpeg" width="200" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
 							<p>Korea Maritime & Ocean University <br> Ocean Engineering <br><br>
-							<a href="https://woensug-choi.github.io//CV_%EC%B5%9C%EC%9B%90%EC%84%9D_WoensugChoi.pdf" target="_blank">Curriculum Vitae</a> <br>
+							<a href="https://woensug-choi.super.site/ciriculum-viatae" target="_blank" class="fa fa-id-card">Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ" target="_blank">Google Scholar</a> <br>
 							<a href="https://github.com/woensug-choi" target="_blank">@woensug-choi</a> <br></p>
 						</header>
@@ -79,9 +79,8 @@
 						<footer>
 							<ul class="icons">
                                                                 <li><a href="https://www.instagram.com/erikku_choi/" class="fa-instagram">Instagram</a></li>
-								<li><a href="https://www.facebook.com/erikku.choi" class="fa fa-facebook">Facebook</a></li>
-								<li><a href="https://onedayof.tistory.com" class="fa fa-desktop">Homepage</a></li>
-								<li><a href="http://cargocollective.com/mirrorhoteladrogue" class="fa fa-cubes">MirrorHotelAdrogue</a></li>
+								<li><a href="https://onedayof.tistory.com" class="fa a-pencil">Homepage</a></li>
+								<li><a href="https://woensug-choi.github.io/jump-to-ros-gazebo/" class="fa fa-book">Book Writing</a></li>
 							</ul>
 						</footer>
 					</section>
