--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta name="google-site-verification" content="npMVZgix9HPhVeC8MEsW5Sxt5UaYqHHYSzS9W74OJSE" />
-		<meta name="naver-site-verification" content="555062748b9f4c70b2d31f72538f0c8a580041a6"/>
+		<meta name="naver-site-verification" content="c179c796fe90c28675a27bfaffa998351fd6b4a4" />
 		
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Eric's Personal Page">
@@ -104,6 +104,14 @@
 					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
+			</script>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-TL5VE4CEL6"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'G-TL5VE4CEL6');
 			</script>
 			<script>
 			 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
