--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<span class="avatar"><img src="images/C63DA81E-B36B-4102-B52F-2B446E89ACA5.jpeg" width="200" alt="" /></span>
 							<h1>Choi Woen-Sug</h1>
 							<p> Dept. Ocean Engineering <br> Korea Maritime & Ocean University <br><br>
-							<a href="https://dear-limburger-b0e.notion.site/Curriculum-Vitae-abc6db5969a740c9a2c35babf7a73727" target="_blank">📄 Curriculum Vitae</a> <br>
+							<a href="https://woensug-choi.vercel.app/curriculum-vitae" target="_blank">📄 Curriculum Vitae</a> <br>
 							<a href="https://scholar.google.com/citations?user=9rpkxUwAAAAJ" target="_blank">🧑‍🎓 Google Scholar</a> <br>
 							<a href="https://github.com/woensug-choi" target="_blank">🔧 @woensug-choi</a> <br></p>
 						</header>
