--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 						-->
 						<footer>
 							<ul class="icons">
+                                                                <li><a href="https://kmou-class-materials.vercel.app/" class="fa-school">Class Materials</a></li>
                                                                 <li><a href="https://www.instagram.com/erikku_choi/" class="fa-instagram">Instagram</a></li>
 								<li><a href="https://onedayof.tistory.com" class="fa fa-pencil">Homepage</a></li>
 								<li><a href="https://woensug-choi.github.io/jump-to-ros-gazebo/" class="fa fa-book">Book Writing</a></li>
